--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="60dp"
         android:src="@drawable/wiaseai_logo"
-        android:layout_margin="16dp" />
+        android:layout_margin="35dp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rec_chat"
@@ -38,7 +38,8 @@
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_alignParentBottom="true"
-        android:padding="8dp">
+        android:padding="8dp"
+        android:layout_marginBottom="23dp">
 
         <EditText
             android:id="@+id/message_edit_text"
